--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -74,6 +74,18 @@ world-78688046 {
 }
 
 
+world114213595 {
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world1544803905 {
     S:filterText=
 }
@@ -97,24 +109,16 @@ world1855637915 {
 
 world205705211 {
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=kit
-
-    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
 
 world2081894290 {
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=space sui
-
-    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
