--- a/config/voidislandcontrol.cfg
+++ b/config/voidislandcontrol.cfg
@@ -71,7 +71,7 @@ general {
          >
 
         # Forces players to spawn at the spawn position. By default, the player will be teleported to a safe spot above it if spawning fails. This config disables that
-        B:forceSpawn=false
+        B:forceSpawn=true
         B:forceSpawnAtOffset=false
 
         # Biome used for islands
@@ -96,7 +96,7 @@ general {
         S:islandSpawnType=asteroid
 
         # Y Level to spawn islands at (Set to 2 above where you want the ground block)
-        I:islandYLevel=100
+        I:islandYLevel=200
 
         # Start the world in one chunk mode
         B:oneChunk=false
@@ -115,8 +115,8 @@ general {
 
         # Starting items given to new players
         S:startingItems <
-            extraplanets:tier5_kit:0*1
-            moreplanets:black_hole_storage:0*1
+            ftbquests:book:0*1
+            
             
             
             
