--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -835,10 +835,10 @@ items {
     I:"Amount of Radiation reduced by Sleeping"=25
 
     # Setting this option to false will disable & remove the Pressure System
-    B:"Enable Pressure"=true
+    B:"Enable Pressure"=false
 
     # Setting this option to false will disable & remove the Pressure System for Galacticraft Planets & Moons
-    B:"Enable Pressure for Galacticraft Planets & Moons"=true
+    B:"Enable Pressure for Galacticraft Planets & Moons"=false
 
     # Setting this option to false will disable & remove the Radiation System
     B:"Enable Radiation"=true
@@ -847,7 +847,7 @@ items {
     B:"Enable Radiation for Galacticraft Planets & Moons"=true
 
     # Will hide the Pressure & Radiation HUD Bars for Planets & Moons & Space Stations that have disabled Pressure and Radiation or a value of 0
-    B:"Hide Pressure & Radiation HUD Bars when not needed"=false
+    B:"Hide Pressure & Radiation HUD Bars when not needed"=true
 }
 
 
