--- a/config/MovingWorld/AssemblePriority.cfg
+++ b/config/MovingWorld/AssemblePriority.cfg
@@ -86,6 +86,26 @@ mobile_chunk {
         openblocks:block_placer
         openblocks:sky
         openblocks:xp_shower
+        appliedenergistics2:security_station
+        appliedenergistics2:quartz_growth_accelerator
+        appliedenergistics2:crafting_unit
+        appliedenergistics2:crafting_accelerator
+        appliedenergistics2:crafting_storage_1k
+        appliedenergistics2:crafting_storage_4k
+        appliedenergistics2:crafting_storage_16k
+        appliedenergistics2:crafting_storage_64k
+        appliedenergistics2:crafting_monitor
+        appliedenergistics2:molecular_assembler
+        enderio:block_dark_steel_door
+        enderio:block_self_resetting_lever5
+        enderio:block_self_resetting_lever10
+        enderio:block_self_resetting_lever30
+        enderio:block_self_resetting_lever60
+        enderio:block_self_resetting_lever300
+        enderio:block_painted_fence_gate
+        enderio:block_painted_wooden_door
+        enderio:block_painted_iron_door
+        enderio:block_painted_dark_steel_door
         storagedrawers:keybutton
         quark:nether_brick_fence_gate
         quark:spruce_pressure_plate
@@ -103,7 +123,6 @@ mobile_chunk {
         quark:gold_button
         quark:obsidian_pressure_plate
         davincisvessels:crate_wood
-        refinedstorage:detector
         glacidus:underground_door
      >
     S:highprioritydisassembly_blocks <
