--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,17 +1,17 @@
 #Splash screen properties
-#Wed Nov 07 15:35:09 EST 2018
-background=0x00134d
-memoryGood=0x666699
+#Sat Nov 10 12:49:03 EST 2018
+background=0x2a323a
+memoryGood=0x2a323a
 font=0x0
-barBackground=0x00134d
-barBorder=0x666699
-memoryLow=0x666699
+barBackground=0x0080EC
+barBorder=0x0080EC
+memoryLow=0x90080EC
 rotate=false
-memoryWarn=0x00134d
+memoryWarn=0x0080EC
 showMemory=true
-bar=0x666699
+bar=0x2a323a
 enabled=true
 resourcePackPath=resources
 logoOffset=0
-forgeTexture=fml\:textures/gui/forge.png
+forgeTexture=fml\:textures/gui/astroblock.png
 fontTexture=textures/font/ascii.png
