--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -34,6 +34,14 @@ world-1431591077 {
 }
 
 
+world-1446969189 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@matte
+    B:overlayEnabled=true
+}
+
+
 world-1818778341 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
@@ -42,10 +50,34 @@ world-1818778341 {
 }
 
 
+world-1906371854 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=struct
+    B:overlayEnabled=true
+}
+
+
+world-1909883461 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=torc
+    B:overlayEnabled=true
+}
+
+
 world-326496271 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=copper
+    B:overlayEnabled=true
+}
+
+
+world-371302821 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=sa
     B:overlayEnabled=true
 }
 
@@ -66,6 +98,14 @@ world-598917905 {
 }
 
 
+world-754345806 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@gala
+    B:overlayEnabled=true
+}
+
+
 world-78688046 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -74,12 +114,28 @@ world-78688046 {
 }
 
 
+world1032014715 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world114213595 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1374514482 {
     B:cheatItemsEnabled=true
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=
+    S:filterText=batt
 
     # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
@@ -103,6 +159,14 @@ world1855637915 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@gala
+    B:overlayEnabled=true
+}
+
+
+world1927685138 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=lea
     B:overlayEnabled=true
 }
 
@@ -143,6 +207,14 @@ world856609915 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=torc
+    B:overlayEnabled=true
+}
+
+
+world923154898 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=stru
     B:overlayEnabled=true
 }
 
