--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -102,7 +102,7 @@ commands {
     B:chunks=true
     B:fly=true
     B:heal=true
-    B:home=true
+    B:home=false
     B:inv=true
     B:kickme=true
     B:killall=true
@@ -112,7 +112,7 @@ commands {
     B:nick=true
     B:ranks=true
     B:rtp=true
-    B:spawn=true
+    B:spawn=false
     B:tpa=true
     B:tpl=true
     B:trash_can=true
