--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -42,6 +42,19 @@ world-1446969189 {
 }
 
 
+world-1773885582 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=wood
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world-1818778341 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
@@ -66,10 +79,39 @@ world-1909883461 {
 }
 
 
+world-1941508526 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-2136922793 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=she
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world-326496271 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=copper
+    B:overlayEnabled=true
+}
+
+
+world-339723973 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -86,6 +128,14 @@ world-547553678 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=kit
+    B:overlayEnabled=true
+}
+
+
+world-57222117 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@proje
     B:overlayEnabled=true
 }
 
@@ -132,18 +182,14 @@ world114213595 {
 
 world1374514482 {
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=batt
-
-    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
 
 world1544803905 {
-    S:filterText=
+    S:filterText=therm
 }
 
 
@@ -187,6 +233,19 @@ world2081894290 {
 }
 
 
+world397973650 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world495519058 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -196,6 +255,14 @@ world495519058 {
 
 
 world785103634 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world844121851 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
