--- a/config/deepmoblearning.cfg
+++ b/config/deepmoblearning.cfg
@@ -169,6 +169,7 @@ general {
         minecraft:bone,64,0
         minecraft:arrow,64,0
         minecraft:skull,6,0
+        minecraft:dye,32,4
      >
 
     # Slime
@@ -207,6 +208,7 @@ general {
         minecraft:iron_ingot,16,0
         minecraft:carrot,32,0
         minecraft:potato,32,0
+        galacticraftcore:basic_item,16,3
      >
 }
 
