--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -43,14 +43,9 @@ world-1446969189 {
 
 
 world-1773885582 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=wood
-
-    # Show the list of ingredients next to open guis.
+    S:filterText=@exni
     B:overlayEnabled=true
 }
 
@@ -88,14 +83,9 @@ world-1941508526 {
 
 
 world-2136922793 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=she
-
-    # Show the list of ingredients next to open guis.
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -128,6 +118,19 @@ world-547553678 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=kit
+    B:overlayEnabled=true
+}
+
+
+world-547718693 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
@@ -189,7 +192,7 @@ world1374514482 {
 
 
 world1544803905 {
-    S:filterText=therm
+    S:filterText=
 }
 
 
@@ -234,14 +237,9 @@ world2081894290 {
 
 
 world397973650 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
