--- a/config/exnihilocreatio/ExNihiloCreatio.cfg
+++ b/config/exnihilocreatio/ExNihiloCreatio.cfg
@@ -12,7 +12,7 @@ exnihilocreatio {
         B:clientFancyAutoSieveAnimations=true
 
         # This enables the thin Sieve model which is similar to the one in the 1.7 ex nihilo
-        B:thinCrucibleModel=false
+        B:thinCrucibleModel=true
     }
 
     mechanics {
@@ -39,6 +39,8 @@ exnihilocreatio {
     }
 
     crooking {
+        # Disable the ExNihilo Crooks, useful if another mod adds compatible crooks
+        B:disableCrookCrafting=false
         I:numberOfTimesToTestVanillaDrops=3
         D:stringChance=1.0
         D:stringFortuneChance=1.0
@@ -51,12 +53,14 @@ exnihilocreatio {
         # Keeping this on false will only load recipes registered in code
         # This is recommended to enable for Packmakers
         # For players just playing with this without wanting to configure something this is recommended to keep disabled
-        B:enableJSONLoading=false
+        B:enableJSONLoading=true
+        B:oredictExNihiloSeeds=true
         B:oredictVanillaItems=true
     }
 
     sieve {
         I:autoSieveRadius=2
+        I:meshMaxStackSize=16
         B:setFireToMacroUsers=false
         I:sieveSimilarRadius=2
     }
