--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -532,7 +532,7 @@ dimensionid {
     B:"Enable registering of Biomes Types for ExtraPlanets biomes"=true
 
     # Setting this option to false, will change it back to be using the Galacticraft Galaxy Map/Celestaial Selection Screen
-    B:"Use Custom Galaxy Map/Celestaial Selection Screen"=true
+    B:"Use Custom Galaxy Map/Celestaial Selection Screen"=false
 }
 
 
