--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -164,6 +164,8 @@ ranks {
 
     # Adds chat colors/rank-specific syntax.
     B:override_chat=true
+
+    # Print command usage key errors?
     B:print_command_errors=true
 }
 
