--- a/config/teslacorelib.cfg
+++ b/config/teslacorelib.cfg
@@ -64,8 +64,8 @@ flags {
 
 gui {
     # Allows energy GUI to change the display energy system.
-    #  [default: false]
-    B:allowChangeEnergyDisplay=false
+    #  [default: true]
+    B:allowChangeEnergyDisplay=true
 }
 
 
