--- a/config/MovingWorld/AssemblePriority.cfg
+++ b/config/MovingWorld/AssemblePriority.cfg
@@ -70,6 +70,10 @@ mobile_chunk {
         malisisdoors:saloon
         malisisdoors:camofencegate
         malisisdoors:verticalhatch
+        minestrapp:redwood_fence_gate
+        minestrapp:frozen_oak_fence_gate
+        minestrapp:charwood_fence_gate
+        minestrapp:door_charwood
         moreplanets:cheese_spore_fence_gate
         moreplanets:cheese_spore_door_block
         moreplanets:infected_fence_gate
@@ -99,10 +103,6 @@ mobile_chunk {
         enderio:block_painted_iron_door
         enderio:block_painted_dark_steel_door
         storagedrawers:keybutton
-        quark:redstone_randomizer
-        quark:iron_button
-        quark:gold_button
-        quark:obsidian_pressure_plate
         quark:nether_brick_fence_gate
         quark:spruce_pressure_plate
         quark:birch_pressure_plate
@@ -114,6 +114,10 @@ mobile_chunk {
         quark:jungle_button
         quark:acacia_button
         quark:dark_oak_button
+        quark:redstone_randomizer
+        quark:iron_button
+        quark:gold_button
+        quark:obsidian_pressure_plate
         davincisvessels:crate_wood
      >
     S:highprioritydisassembly_blocks <
