--- a/config/RPG-HUD/settings.cfg
+++ b/config/RPG-HUD/settings.cfg
@@ -182,7 +182,7 @@
     B:show_hunger_preview=true
 
     # Show/Hide the numeric value of the stamina/hunger bar. If you use the modern style, this will also affect the health value
-    B:show_numbers_food=false
+    B:show_numbers_food=true
 }
 
 
@@ -206,25 +206,25 @@
     B:prevent_element_render_health=false
 
     # Prevent the render event of this element. This might disable features of other mods.   §cActivate this if another mod renders §csomething you don't want §cand can't disable it otherwise §cWARNING: Might disable other things, too
-    B:prevent_event_health=false
+    B:prevent_event_health=true
 
     # Force the vanilla version of this element to be rendered instead.   §cActivate this if you encounter a §cproblem with this element
     B:render_vanilla_health=false
 
     # Show/Hide the numeric value of the health bar. If you use the modern style, this will also affect the food value
-    B:show_numbers_health=false
+    B:show_numbers_health=true
 }
 
 
 "1:health_mount" {
     # Set this element to be rendered regardless if other mods disable it.   §cActivate this if another mod §cdisables this element
-    B:force_render_health_mount=false
+    B:force_render_health_mount=true
 
     # Prevent this element from rendering. Other mods can still render their elements that are hooked to this element.   §cActivate this if you want to only  §crender the element of another mod.
     B:prevent_element_render_health_mount=false
 
     # Prevent the render event of this element. This might disable features of other mods.   §cActivate this if another mod renders §csomething you don't want §cand can't disable it otherwise §cWARNING: Might disable other things, too
-    B:prevent_event_health_mount=false
+    B:prevent_event_health_mount=true
 
     # Force the vanilla version of this element to be rendered instead.   §cActivate this if you encounter a §cproblem with this element
     B:render_vanilla_health_mount=false
