--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -5,26 +5,50 @@
 world-2136922793 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=ore
+    S:filterText=suit
     B:overlayEnabled=true
 }
 
 
 world-547718693 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=anti
-
-    # Show the list of ingredients next to open guis.
+    S:filterText=
     B:overlayEnabled=true
 }
 
 
 world1544803905 {
     S:filterText=
+}
+
+
+world1923314875 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
+world200589746 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world397973650 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=r
+    B:overlayEnabled=true
 }
 
 
