--- a/config/AsmodeusCore/core.conf
+++ b/config/AsmodeusCore/core.conf
@@ -14,7 +14,7 @@ general {
     I:speedTimeTravel=1
 
     # Enable/Disable New Galaxy Map.
-    B:enableNewGalaxyMap=true
+    B:enableNewGalaxyMap=false
 
     # Enable/Disable 2D Galaxy Map. (like in GC2)
     B:enable2DGalaxyMap=false
