--- a/config/teslacorelib.cfg
+++ b/config/teslacorelib.cfg
@@ -7,7 +7,7 @@ flags {
     B:allowMachinesToSpawnItems=true
 
     # Specifies if the simple tesla battery item will be registered or not.
-    #  [default: true]
+    #  [default: false]
     B:registerBattery=true
 
     # Specifies if the machine case item will be registered or not.
@@ -15,7 +15,7 @@ flags {
     B:registerMachineCase=true
 
     # Specifies if the metal powder items will be registered or not.
-    #  [default: true]
+    #  [default: false]
     B:registerPowders=true
 
     # Specifies if the metal sheet items will be registered or not.
@@ -64,8 +64,9 @@ flags {
 
 gui {
     # Allows energy GUI to change the display energy system.
-    #  [default: true]
+    #  [default: false]
     B:allowChangeEnergyDisplay=true
+    S:energyDisplay=RF
 }
 
 
