--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -18,15 +18,18 @@ world-2136922793 {
 }
 
 
-world-284259054 {
-    # Give items instead of showing the recipe.
+world-222096037 {
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
 
-    # Show the list of ingredients next to open guis.
+
+world-284259054 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@fac
     B:overlayEnabled=true
 }
 
@@ -55,6 +58,22 @@ world-701906309 {
 }
 
 
+world1314074683 {
+    # Show the list of bookmarks next to open guis.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world1469659035 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
@@ -65,6 +84,14 @@ world1469659035 {
 
 world1544803905 {
     S:filterText=
+}
+
+
+world1704957490 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
 }
 
 
