--- a/config/Guide-API/Guide-API.cfg
+++ b/config/Guide-API/Guide-API.cfg
@@ -21,6 +21,9 @@ books {
     spawn {
         #  [default: false]
         B:"deepmoblearning:deepguide"=false
+
+        #  [default: false]
+        B:"inventorygenerators:guide_book"=false
         B:"woot:guide"=false
     }
 
