--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -111,7 +111,7 @@ commands {
     B:nbtedit=true
     B:nick=true
     B:ranks=true
-    B:rtp=true
+    B:rtp=false
     B:spawn=false
     B:tpa=true
     B:tpl=true
