--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,6 +2,24 @@
 
 ~CONFIG_VERSION: 0.1.0
 
+world-1027977102 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@minestra
+    B:overlayEnabled=true
+}
+
+
+world-1348980517 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-1685210126 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -10,15 +28,33 @@ world-1685210126 {
 }
 
 
-world-2136922793 {
+world-1802519045 {
+    B:bookmarkOverlayEnabled=false
     B:cheatItemsEnabled=true
     B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-2136922793 {
+    # Show the list of bookmarks next to open guis.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
     S:filterText=flin
+
+    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
 
 world-222096037 {
+    B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
@@ -30,6 +66,15 @@ world-284259054 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@fac
+    B:overlayEnabled=true
+}
+
+
+world-43515502 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=loot
     B:overlayEnabled=true
 }
 
@@ -58,18 +103,20 @@ world-701906309 {
 }
 
 
-world1314074683 {
-    # Show the list of bookmarks next to open guis.
+world105386779 {
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
+    B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
 
-    # Show the list of ingredients next to open guis.
+
+world1314074683 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -105,6 +152,15 @@ world1923314875 {
 
 world200589746 {
     B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world2081609554 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
     B:overlayEnabled=true
