--- a/config/IntegrationForegoing.cfg
+++ b/config/IntegrationForegoing.cfg
@@ -6,7 +6,9 @@ integrationforegoing {
         B:actuallyAdditions=true
         B:ae2=true
         B:agriCraft=true
+        B:astralSorcery=true
         B:biomesoPlenty=true
+        B:botania=true
         B:enderIO=true
         B:evilcraft=true
         B:exNihiloCreatio=true
