--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Dec 03 23:12:53 EST 2018
+#Sat Dec 08 11:50:55 EST 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
@@ -19,4 +19,4 @@ shortcutKeyOneItem=LCONTROL, RCONTROL
 shortcutKeyToUpperSection=UP
 shortcutKeyToLowerSection=DOWN
 shortcutKeyDrop=LALT, RALT
-version=1.64-dev+release.117.7221546
+version=1.64+dev.126.1e67665
