--- a/config/voidislandcontrol.cfg
+++ b/config/voidislandcontrol.cfg
@@ -67,7 +67,7 @@ general {
 
         # Custom islands using the structure block data. Files are to be placed in the voidislandcontrolstructures config folder. The names in this list should be the same as the structure names. These names are the ids for the island type as well
         S:customIslands <
-            capsule
+            station
          >
 
         # Forces players to spawn at the spawn position. By default, the player will be teleported to a safe spot above it if spawning fails. This config disables that
@@ -84,7 +84,7 @@ general {
         I:islandDistance=1000
 
         # This is for the island at 0,0! Valids are random, bedrock, sand, snow, wood, grass, gog, or others added by addons/custom islands
-        S:islandMainSpawnType=capsule
+        S:islandMainSpawnType=station
 
         # Disables effect of protectionBuildRange
         B:islandProtection=false
@@ -93,7 +93,7 @@ general {
         I:islandSize=5
 
         # Valids are random, sand, snow, wood, grass, gog, or others added by addons/custom islands
-        S:islandSpawnType=capsule
+        S:islandSpawnType=station
 
         # Y Level to spawn islands at (Set to 2 above where you want the ground block)
         I:islandYLevel=225
@@ -115,8 +115,8 @@ general {
 
         # Starting items given to new players. Use the /startingInv command in game
         S:startingItems <
+            loreexpansion:lore_journal:1*1
             ftbquests:book:0*1
-            
             
             
             
@@ -289,7 +289,7 @@ general {
         S:commandBlockType=NONE
 
         # Name of the main command
-        S:commandName=capsule
+        S:commandName=station
 
         # Allow the one chunk command to be used
         B:oneChunkCommandAllowed=false
