--- a/config/MatterOverdrive/MatterOverdrive.cfg
+++ b/config/MatterOverdrive/MatterOverdrive.cfg
@@ -174,13 +174,13 @@ entities {
          >
 
         # Should the Rouge Androids drop any items [default: true]
-        B:do_drops=true
+        B:do_drops=false
 
         # Should Legendary rogue androids drop Legendary weapons [default: true]
         B:drop_legendary_weapons=true
 
         # Should normal Rogue Androids drop their weapons? If set to false they will never drop their weapons, but if set to true there is a small chance they will drop them. [default: true]
-        B:drop_weapons=true
+        B:drop_weapons=false
         B:enable=true
 
         # The chance in percent, of rogue androids becoming legendary. This is the base value. This value is multiplied by the android's level [range: 0.0 ~ 1.0, default: 0.03]
