--- a/config/lostcities/profile_rarecities.cfg
+++ b/config/lostcities/profile_rarecities.cfg
@@ -183,7 +183,7 @@ lostcity_rarecities {
     B:avoidGeneratedCactii=false
 
     # This will prevent the generation of desert wells [default: false]
-    B:avoidGeneratedDesertWell=false
+    B:avoidGeneratedDesertWell=true
 
     # This will prevent biomes from generating flowers [default: false]
     B:avoidGeneratedFlowers=false
@@ -222,7 +222,7 @@ lostcity_rarecities {
     I:bedrockLayer=1
 
     # This is used in combination with allowedBiomeFactors. 'original' is the old strategy. 'randomized' is a new strategy that tries to randomize the biomes better. 'varied' is similar but has a more relaxed biome distance function [default: original]
-    S:biomeSelectionStrategy=varied
+    S:biomeSelectionStrategy=randomized
 
     # The chance that a chunk can possibly contain a bridge. There actually being a bridge also depends on the presence of adjacent bridges and other conditions [range: 0.0 ~ 1.0, default: 0.7]
     S:bridgeChance=0.7
@@ -264,7 +264,7 @@ lostcity_rarecities {
     S:buildingWithoutLootChance=0.2
 
     # The chance that a chest will have no loot [range: 0.0 ~ 1.0, default: 0.2]
-    S:chestWithoutLootChance=0.2
+    S:chestWithoutLootChance=0.0
 
     # The chance that a chunk can possibly contain a corridor. There actually being a corridor also depends on the presence of adjacent corridors [range: 0.0 ~ 1.0, default: 0.7]
     S:corridorChance=0.7
@@ -288,7 +288,7 @@ lostcity_rarecities {
     B:generateLoot=true
 
     # If true then the buildings will be full of spawners [default: true]
-    B:generateSpawners=true
+    B:generateSpawners=false
 
     # A json with generator options for the chunk generator [default: ]
     S:generatorOptions=
@@ -309,7 +309,7 @@ lostcity_rarecities {
     S:highwayPerlinFactor=2.0
 
     # If true then a highway will only generate if both sides have a valid city. If false then one city is sufficient [default: false]
-    B:highwayRequiresTwoCities=false
+    B:highwayRequiresTwoCities=true
 
     # For highways on a certain axis, this value is used to scale the perlin noise generator on the secondary axis. Increasing this value will increase the variation of nearby highways [range: 1.0 ~ 1000.0, default: 10.0]
     S:highwaySecondaryPerlinScale=10.0
@@ -370,7 +370,7 @@ lostcity_rarecities {
     S:ruinMinlevelPercent=0.8
 
     # If true there is a chance a building is ruined from the top (not caused by explosion damage) [default: false]
-    B:ruins=false
+    B:ruins=true
 
     # When this is set the player will always spawn in the given biome [default: ]
     S:spawnBiome=
@@ -415,7 +415,7 @@ structures_rarecities {
     B:generateDungeons=true
 
     # Generate lakes (lava/water)
-    B:generateLakes=true
+    B:generateLakes=false
 
     # Generate mansions
     B:generateMansions=true
