--- a/config/lostsouls.cfg
+++ b/config/lostsouls.cfg
@@ -36,7 +36,7 @@ general {
      >
 
     # The chance that a building is haunted [range: 0.0 ~ 1.0, default: 0.8]
-    S:hauntedChance=0.8
+    S:hauntedChance=1.0
 
     # If this is true then all chests will be locked until the building is cleared [default: true]
     B:lockChestsUntilCleared=true
@@ -54,16 +54,16 @@ general {
     I:maxMobs=50
 
     # This message is given when the player clears a building [default: The building feels a lot safer now!]
-    S:messageBuildingCleared=The place feels a lot safer now!
+    S:messageBuildingCleared=The building feels a lot safer now!
 
     # This message is given when the player is halfway clearing a building [default: About half way there! Keep going!]
     S:messageBuildingHalfway=About half way there! Keep going!
 
     # This message is given when the player enters a haunted building for the first time [default: This building is haunted. Be careful!]
-    S:messageBuildingHaunted=This place has been invaded. Be careful!
+    S:messageBuildingHaunted=This building has been invaded. Be careful!
 
     # This message is given when the player tries to open a chest in a haunted building [default: The building isn't safe enough!]
-    S:messageUnsafeBuilding=The place isn't safe enough to open this chest!
+    S:messageUnsafeBuilding=The building isn't safe enough to open this chest!
 
     # The minimum damage bonus that the mob will get [range: 0.01 ~ 10000.0, default: 2.0]
     S:minDamageBonus=2.0
