--- a/config/BlankPlanet.cfg
+++ b/config/BlankPlanet.cfg
@@ -32,12 +32,12 @@ general {
 
     # WILL GET IGNORED IF 'Always Daytime' IS ENABLED
     B:"Always Night Time"=false
-    B:"Breathable Atmosphere"=false
+    B:"Breathable Atmosphere"=true
     S:"Day Length"=24000
     S:"Fall Damage Multiplier"=0.3
     S:"Fuel Usage Multiplier"=1.0
     S:Gravity=0.058
-    S:"Rocket reqiured"=3
+    S:"Rocket reqiured"=10
     S:"Solar Energy Multiplier"=8.0
     S:"Sound Vol Reduction"=10.0
     S:"Star Brightness"=1.0
