--- a/config/SpaceCraftX/spacecraftx.conf
+++ b/config/SpaceCraftX/spacecraftx.conf
@@ -2,13 +2,13 @@
 
 general {
     # Tier level for FalconCraft 9 booster.
-    I:rocketTierFalconCraft9=1
+    I:rocketTierFalconCraft9=2
 
     # Tier level for DragonCraft capsule.
-    I:rocketTierDragonCraft=9
+    I:rocketTierDragonCraft=1
 
     # Fuel tank capacity for FalconCraft 9 booster.
-    I:rocketFuelCapacityFalconCraft9=1000
+    I:rocketFuelCapacityFalconCraft9=2000
 
     # Oxygen tank capacity for FalconCraft 9 booster.
     I:rocketOxygenCapacityFalconCraft9=1000
@@ -20,16 +20,16 @@ general {
     I:rocketOxygenCapacitySecondStage=500
 
     # Fuel tank capacity for DragonCraft capsule.
-    I:rocketFuelCapacityDragonCraft=5000
+    I:rocketFuelCapacityDragonCraft=2000
 
     # Oxygen tank capacity for DragonCraft capsule.
-    I:rocketOxygenCapacityDragonCraft=50000
+    I:rocketOxygenCapacityDragonCraft=20000
 
     # If this is enabled, lithium ore will generate on the overworld.
-    B:"Enable Lithium Ore Gen"=false
+    B:"Enable Lithium Ore Gen"=true
 
     # The normal factor is 1.  Increase this to 2 - 5 if other mods with a lot of oxygen (e.g. Mekanism) are installed to increase Falcon rocket oxygen requirement.
-    I:"Rocket oxygen factor"=1
+    I:"Rocket oxygen factor"=2
 }
 
 
