--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -109,7 +109,7 @@ features {
     machines {
         B:Charger=true
         B:CrystalGrowthAccelerator=true
-        B:GrindStone=true
+        B:GrindStone=false
         B:Inscriber=true
         B:VibrationChamber=true
     }
@@ -444,7 +444,7 @@ wireless {
 worldgen {
     D:meteoriteClusterChance=0.1
     I:meteoriteDimensionWhitelist <
-        -15
+        -1501
      >
     I:meteoriteMaximumSpawnHeight=180
     I:minMeteoriteDistance=707
