--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -74,7 +74,7 @@ blocks {
 
 "celestial body map settings" {
     # [range: -100 ~ 100, default: 0]
-    D:"Ceres Planet Map Relative Distance From Center Offset"=0.0
+    D:"Ceres Planet Map Relative Distance From Center Offset"=0.5
 
     # [range: -100 ~ 100, default: 0]
     D:"Eris Planet Map Relative Distance From Center Offset"=0.0
@@ -691,10 +691,10 @@ items {
     B:Callisto=true
 
     # Setting this option to false will remove Ceres & all the related items/block/tools/armour/space stations!
-    B:Ceres=true
+    B:Ceres=false
 
     # Setting this option to false will remove Deimos & all the related items/block/tools/armour/space stations!
-    B:Deimos=true
+    B:Deimos=false
 
     # Setting this option to false will remove Europa & all the related items/block/tools/armour/space stations!
     B:Europa=true
@@ -727,7 +727,7 @@ items {
     B:Oberon=true
 
     # Setting this option to false will remove Phobos & all the related items/block/tools/armour/space stations!
-    B:Phobos=true
+    B:Phobos=false
 
     # Setting this option to false will remove Rhea & all the related items/block/tools/armour/space stations!
     B:Rhea=true
