--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -209,11 +209,11 @@ worldgen {
 
     # List of non-galacticraft dimension IDs to generate oil in.
     I:"Oil gen in external dimensions" <
-        -30
+     -1501
      >
 
     # If this is enabled, GC oil will be added to existing Overworld maps where possible.
-    B:"Retro Gen of GC Oil in existing map chunks"=false
+    B:"Retro Gen of GC Oil in existing map chunks"=true
 
     # If this is enabled, copper ore will generate on the overworld.
     B:"Enable Copper Ore Gen"=false
