--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,8 @@
+T:{id:"spacecraftx:dragon_used",Count:1b,Damage:0s}
+T:{id:"spacecraftx:dragon",Count:1b,Damage:4s}
+T:{id:"spacecraftx:dragon",Count:1b,Damage:0s}
+T:{id:"minecraft:iron_ore",Count:1b,Damage:0s}
+T:{id:"thermalexpansion:machine",Count:1b,tag:{RSControl:0b,Facing:3b,Energy:0,SideCache:[B;3B,1B,2B,2B,2B,2B],Level:0b},Damage:1s}
 T:{id:"galacticraftcore:landing_pad",Count:1b,Damage:0s}
 T:{id:"galacticraftplanets:grapple",Count:1b,Damage:0s}
 T:{id:"minecraft:string",Count:1b,Damage:0s}
