--- a/config/voidislandcontrol.cfg
+++ b/config/voidislandcontrol.cfg
@@ -60,7 +60,7 @@ general {
         B:autoCreate=true
 
         # ONLY TAKES EFFECT ON DEDICATED SERVERS-Automatically give new players islands
-        B:autoCreateServersOnly=false
+        B:autoCreateServersOnly=true
 
         # Type of block to spawn under islands
         # Valid values:
@@ -271,7 +271,7 @@ general {
 
     commandsettings {
         # Allows the home command to be used
-        B:allowHomeCommand=true
+        B:allowHomeCommand=false
 
         # Allows the visit command to be used
         B:allowVisitCommand=false
